@@ -35,6 +35,7 @@
 
 - AES Crypt Plugin: Reduced max password length from 256 to 128 which improved performance by 22%
 - CUDA Backend: Do not warn about missing CUDA SDK installation if --stdout is used
+- Folder Management: Add support for XDG Base Directory specification if hashcat was installed using make install
 - OpenCL Backend: Use CL_DEVICE_BOARD_NAME_AMD instead of CL_DEVICE_NAME for device name in case OpenCL runtime supports this query
 - Performance Monitor: Add -S as a user suggestion to improve cracking performance in specific attack configurations
 - RAR3-p (Compressed): Fix workaround in unrar library in AES constant table generation to enable multi-threading support
